# esp32_cam_blutooth

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  start.md
.cache/clangd/index/: bf20a6.c.D77B10420EA68BD7.idx  bf20a6.h.4B12F4B6C405C78E.idx  bf20a6_regs.h.71758C310297CBE6.idx  bf20a6_settings.h.6A9EDE6D745B1D06.idx  bf3005.c.38BA3E6C75E7C165.idx  bf3005.h.6FCA11213E3CA86F.idx  bf3005_regs.h.182DF77F8A457902.idx  ble_prov.c.EC53F5AB44847A48.idx  ble_prov.h.7C46D8D20C3407C2.idx  cam_hal.c.82F943BC5BFF9320.idx  cam_hal.h.E3EA92AE0A96C197.idx  camera_module.c.8A2967F12170CA9B.idx  camera_module.h.D866557307EADA04.idx  camera_pins.h.E08EE88A5E0D122C.idx  esp_camera.c.CEBAF47CAE933987.idx  esp_camera.h.9A045AC40057D137.idx  esp_camera_af.c.B15FAEAB5DA30834.idx  esp_camera_af.h.7D229EF2D9C1D612.idx  gc0308.c.C6409E593D2E7CBE.idx  gc0308.h.85699E643BA38F7D.idx  gc0308_regs.h.3FDF017ECECE607F.idx  gc0308_settings.h.0102E5BA7272CF70.idx  gc032a.c.10C2DD5BE7B85703.idx  gc032a.h.0932FEC02D8CB40C.idx  gc032a_regs.h.75BE5783391FF1A2.idx  gc032a_settings.h.B117FF5A127139AB.idx  gc2145.c.4273ED61F7602AB0.idx  gc2145.h.1478573165C4A122.idx  gc2145_regs.h.999A4F01885DB602.idx  gc2145_settings.h.1743B91E4C007416.idx  (+83 more)
.claude/: settings.local.json
docs/: BLE_데이터_통신_흐름.md  ble_callback_설명.md  ble_prov_코드분석.md  nimble_port_freertos_init_설명.md
main/: CMakeLists.txt  ble_prov.c  ble_prov.h  camera_module.c  camera_module.h  camera_pins.h  http_server.c  http_server.h  idf_component.yml  main.c  mqtt_cam.c  mqtt_cam.h  protocol.c  protocol.h  wifi_manager.c  wifi_manager.h
