idf_component_register(
    SRCS
        "main.c"
        "camera_module.c"
        "http_server.c"
        "wifi_manager.c"
        "ble_prov.c"
        "mqtt_cam.c"
        "protocol.c"
    PRIV_REQUIRES
        spi_flash
        nvs_flash
        esp_wifi
        esp_event
        esp_netif
        esp_http_server
        esp32-camera
        mqtt
        bt
        driver
        esp_driver_uart
        esp_driver_gpio
        esp_driver_i2c
    INCLUDE_DIRS
        "."
)
